<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:minHeight="?android:attr/listPreferredItemHeight">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">


        <TextView
            android:id="@+id/poll_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/poll_name_example" />

        <TextView
            android:id="@+id/poll_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/poll_date_label"
            android:textColor="@color/secondary_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poll_name" />

        <TextView
            android:id="@+id/poll_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/secondary_text"
            app:layout_constraintStart_toEndOf="@+id/poll_date_label"
            app:layout_constraintTop_toTopOf="@+id/poll_date_label"
            tools:text="@string/poll_date_example" />

        <TextView
            android:id="@+id/poll_beacon_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/poll_beacon_label"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poll_date_label" />

        <TextView
            android:id="@+id/poll_beacon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/poll_beacon_label"
            app:layout_constraintTop_toTopOf="@+id/poll_beacon_label"
            tools:text="@string/poll_beacon_example" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>