<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.pollposition.PollDetails">

        <ImageView
            android:id="@+id/details_background"
            android:layout_width="0dp"
            android:layout_height="192dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/colorPrimary" />

        <TextView
            android:id="@+id/details_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/primary_text"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/details_name_example" />

        <TextView
            android:id="@+id/details_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/details_date_label"
            android:textColor="@color/icons"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/details_beacon_label"
            app:layout_constraintStart_toStartOf="@+id/details_beacon_label" />

        <TextView
            android:id="@+id/details_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/icons"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/details_date_label"
            app:layout_constraintTop_toTopOf="@+id/details_date_label"
            tools:text="@string/details_date_example" />

        <TextView
            android:id="@+id/details_beacon_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="32dp"
            android:text="@string/details_beacon_label"
            android:textColor="@color/icons"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/details_background"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/details_beacon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/icons"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/details_beacon_label"
            app:layout_constraintTop_toTopOf="@+id/details_beacon_label"
            tools:text="@string/details_beacon_example" />

        <LinearLayout
            android:id="@+id/details_options_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_background" />

        <LinearLayout
            android:id="@+id/details_answers_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_background" />

    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.NestedScrollView>